# DuringWinterBreak

./: README.md
ImageCropTool/: .gitignore  README.md  gui_main.py  main.py  pyproject.toml  requirements.txt
ImageCropTool/data/input/: .gitkeep
ImageCropTool/data/output/: .gitkeep
ImageCropTool/docs/design/: 影像裁剪小工具.docx  影像裁剪小工具.md
ImageCropTool/docs/ppt/: 1-GDAL介绍.md  2-GDAL学习.md  2-GDAL学习.pptx
ImageCropTool/scripts/: convert_icon.py  extract_docs.py  generate_test_data.py  package_app.py
ImageCropTool/src/: __init__.py  crop_core.py  gui.py  utils.py
ImageCropTool/src/image_crop_tool/: __init__.py  cli.py  coord_transform.py  gui.py  image_io.py
ImageCropTool/tests/: test_crop.py
