[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "image-crop-tool"
version = "0.1.0"
description = "A remote sensing image cropping tool based on Python and GDAL."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT License"}
authors = [
  {name = "Noreply", email = "1529007640@qq.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "gdal>=3.4.0",
    "numpy>=1.20.0",
    "tqdm>=4.60.0",
    "Pillow>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
]

[project.urls]
"Homepage" = "https://github.com/Noreply1018/DuringWinterBreak"
"Bug Tracker" = "https://github.com/Noreply1018/DuringWinterBreak/issues"

[tool.setuptools.packages.find]
where = ["src"]
